# Chittagong-Diabetes-Data-Analysis

./: .env  .gitignore  _quarto.yml  file.xlsx  file2.xlsx  index.qmd  main.py  pyproject.toml
_freeze/process/City-Copr-Map/execute-results/: html.json
_freeze/process/controlled-uncontrolled/execute-results/: html.json
_freeze/process/data-wrangling/execute-results/: html.json  tex.json
_freeze/process/final_calculation/execute-results/: html.json  tex.json
_freeze/process/initial_analysis/execute-results/: html.json  tex.json
_freeze/process/map_creation/execute-results/: tex.json
_freeze/process/subdistrict-CC-Map/execute-results/: html.json
docs/: index.html  search.json
docs/process/: City-Copr-Map.html  controlled-uncontrolled.html  data-wrangling.html  final_calculation.html  initial_analysis.html  map_creation.html  subdistrict-CC-Map.html
process/: City-Copr-Map.qmd  controlled-uncontrolled.qmd  data-wrangling.qmd  data-wrangling.quarto_ipynb_1  data-wrangling.quarto_ipynb_2  final_calculation.qmd  final_calculation.quarto_ipynb_1  initial_analysis.qmd  initial_analysis.quarto_ipynb_2  initial_analysis.quarto_ipynb_3  map_creation.html  map_creation.qmd  map_creation.quarto_ipynb_1  map_creation.quarto_ipynb_2  subdistrict-CC-Map.qmd
process/map_creation_files/execute-results/: html.json
