[project]
name = "regional-diabetes-data-analysis"
version = "0.1.0"
description = "Seaborn Crash Course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "citeproc-py>=0.9.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
